--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "doh-proxy"
 version = "0.9.0"
-authors = ["Frank Denis <github@pureftpd.org>"]
+authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
 description = "A DNS-over-HTTPS (DoH) and ODoH (Oblivious DoH) proxy"
-keywords = ["dns","https","doh","odoh","proxy"]
+keywords = ["dns", "https", "doh", "odoh", "proxy"]
 license = "MIT"
 homepage = "https://github.com/jedisct1/rust-doh"
 repository = "https://github.com/jedisct1/rust-doh"
@@ -16,7 +16,7 @@ default = ["tls"]
 tls = ["libdoh/tls"]
 
 [dependencies]
-libdoh = { path = "src/libdoh", version = "0.9.0", default-features = false }
+libdoh = { path="src/libdoh", version="0.9.0", default-features=false }
 clap = "2.33.3"
 dnsstamps = "0.1.7"
 jemallocator = "0.3.2"
@@ -26,7 +26,7 @@ extended-description = """\
 A fast and secure DoH (DNS-over-HTTPS) and ODoH server written in Rust."""
 assets = [
   ["target/release/doh-proxy", "usr/bin/", "755"],
-  ["README.md", "usr/share/doc/doh-proxy/README.md", "644"]
+  ["README.md", "usr/share/doc/doh-proxy/README.md", "644"],
 ]
 section = "network"
 depends = "$auto"
