--- a/src/libdoh/Cargo.toml
+++ b/src/libdoh/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "libdoh"
 version = "0.9.0"
-authors = ["Frank Denis <github@pureftpd.org>"]
+authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
 description = "DoH and Oblivious DoH library for the rust-doh app"
-keywords = ["dns","https","doh","odoh","proxy"]
+keywords = ["dns", "https", "doh", "odoh", "proxy"]
 license = "MIT"
 homepage = "https://github.com/jedisct1/rust-doh"
 repository = "https://github.com/jedisct1/rust-doh"
-categories = ["asynchronous", "network-programming","command-line-utilities"]
+categories = ["asynchronous", "network-programming", "command-line-utilities"]
 edition = "2018"
 
 [features]
@@ -22,11 +22,13 @@ byteorder = "1.4.2"
 bytes = "1.0.1"
 futures = "0.3.13"
 hpke = "0.5.1"
-hyper = { version = "0.14.4", default-features = false, features = ["server", "http1", "http2", "stream"] }
+hyper = { version="0.14.4", default-features=false, features=["server", "http1", "http2", "stream"] }
 odoh-rs = "1.0.0-alpha"
 rand = "0.8.3"
-tokio = { version = "1.6.0", features = ["net", "rt-multi-thread", "parking_lot", "time", "sync"] }
-tokio-rustls = { version = "0.22.0", features = ["early-data"], optional = true }
+tokio = { version="1.6.0", features=["net", "rt-multi-thread", "parking_lot", "time", "sync"] }
+tokio-rustls = { version="0.22.0", features=["early-data"], optional=true }
+jsonwebtoken = "7"
+serde = { version="1.0", features=["derive"] }
 
 [profile.release]
 codegen-units = 1
