--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,8 @@
       },
       "args": [
         "--server-address=9.9.9.9:53",
-        "--listen-address=127.0.0.1:58080"
+        "--listen-address=127.0.0.1:58080",
+        "--hmac-secret=random_secret"
       ],
       "cwd": "${workspaceFolder}/.private"
     }
