--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
 description = "A DNS-over-HTTPS (DoH) and ODoH (Oblivious DoH) proxy"
 keywords = ["dns", "https", "doh", "odoh", "proxy"]
 license = "MIT"
-homepage = "https://github.com/jedisct1/rust-doh"
-repository = "https://github.com/jedisct1/rust-doh"
+homepage = "https://github.com/junkurihara/doh-server"
+repository = "https://github.com/junkurihara/doh-server"
 categories = ["asynchronous", "network-programming", "command-line-utilities"]
 edition = "2018"
 readme = "README.md"
@@ -20,6 +20,9 @@ libdoh = { path="src/libdoh", version="0.9.0", default-features=false }
 clap = "2.33.3"
 dnsstamps = "0.1.7"
 jemallocator = "0.3.2"
+jsonwebtoken = "7.2.0"
+env_logger = "0.8"
+log = "0.4"
 
 [package.metadata.deb]
 extended-description = """\
